--- a/gmall-passport-web/src/main/resources/templates/index.html
+++ b/gmall-passport-web/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
 
 						</li>
 						<li class="bri">
-							<a href="">忘记密码</a>
+							<a href="https://api.weibo.com/oauth2/authorize?client_id=1500314739&response_type=code&redirect_uri=http://passport.gmall.com:8086/vlogin">新浪微博登陆</a>
 						</li>
 						<li class="ent"><button id="btn2" type="button" class="btn2"><a href="javascript:submitLogin();" class="a">登 &nbsp; &nbsp;录</a></button></li>
 
@@ -83,7 +83,6 @@
                     if(token=="fail"){
 						alert("用户名或者密码错误");
 					}else{
-						alert("密码正确");
                         // 验证token是否为空或者异常
                         window.location.href=$("#ReturnUrl").val()+"?token="+token;
 
