结算页面完成

--- a/gmall-cart-web/src/main/resources/templates/cartInner.html
+++ b/gmall-cart-web/src/main/resources/templates/cartInner.html
@@ -27,7 +27,7 @@
                     <li>
                         <p>
                             <span>-</span>
-                            <span th:text="${cartInfo.quantity}">5</span>
+                            <span th:text="${cartInfo.quantity}"></span>
                             <span>+</span>
                         </p>
                     </li>
